src/scss/components/_button.scss
@use '../abstracts/functions/rem' as *;
@use '../abstracts/mixins/button-size' as *;

@layer components {
  .app-c-btn {
    --btn-bg: transparent;
    --btn-bg-hover: transparent;
    --btn-color: var(--text-primary);
    --btn-border: transparent;
    --btn-bg-disabled: var(--btn-bg);
    --btn-border-disabled: var(--btn-border);
    --btn-color-disabled: var(--btn-color);
    --btn-focus-ring: var(--border-focus);
    --btn-focus-ring-size: 2px;

    display: inline-flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    text-decoration: none;
    vertical-align: middle;
    line-height: var(--lh-none);
    -webkit-user-select: none;
    user-select: none;
    border: 1px solid var(--btn-border);
    background-color: var(--btn-bg);
    color: var(--btn-color);
    transition:
      color var(--transition-1),
      background-color var(--transition-1),
      border-color var(--transition-1),
      box-shadow var(--transition-1);

    &:disabled {
      cursor: not-allowed;
      background-color: var(--btn-bg-disabled);
      border-color: var(--btn-border-disabled);
      color: var(--btn-color-disabled);
    }

    &:not(:disabled) {
      &:hover {
        background-color: var(--btn-bg-hover);
      }

      &:focus-visible {
        box-shadow: 0 0 0 var(--btn-focus-ring-size) var(--btn-focus-ring);
      }
    }

    &:focus {
      outline: none;
    }
  }

  .app-c-btn-primary {
    --btn-bg: var(--btn-primary-bg);
    --btn-bg-hover: var(--btn-primary-bg-hover);
    --btn-color: var(--btn-primary-color);
    --btn-border: var(--btn-primary-border);
    --btn-bg-disabled: rgb(var(--btn-primary-disabled-bg) / 60%);
    --btn-border-disabled: rgb(var(--btn-primary-disabled-bg) / 60%);
    --btn-color-disabled: var(--text-disabled);
    --btn-focus-ring: var(--btn-primary-focus-ring);
  }

  .app-c-btn-secondary {
    --btn-bg: var(--btn-secondary-bg);
    --btn-bg-hover: var(--btn-secondary-bg-hover);
    --btn-color: var(--btn-secondary-color);
    --btn-border: var(--btn-secondary-border);
    --btn-bg-disabled: var(--btn-secondary-disabled-bg);
    --btn-border-disabled: var(--btn-secondary-disabled-border);
    --btn-color-disabled: var(--text-disabled);
    --btn-focus-ring: var(--btn-secondary-focus-ring);
  }

  .app-c-btn-tertiary {
    --btn-bg: transparent;
    --btn-bg-hover: var(--btn-tertiary-bg-hover);
    --btn-color: var(--btn-tertiary-color);
    --btn-border: transparent;
    --btn-bg-disabled: transparent;
    --btn-border-disabled: transparent;
    --btn-color-disabled: var(--btn-tertiary-color-disabled);
    --btn-focus-ring: var(--btn-tertiary-focus-ring);
  }

  @each $size in sm, md, lg {
    .app-c-btn-#{$size} {
      @include btn-size($size);
    }
  }

  [class*='app-c-btn-icon'] {
    padding-inline: 0;
    aspect-ratio: 1;
  }

  .app-c-btn-icon-xs {
    height: var(--form-item-height-xs);
    border-radius: var(--radius-sm);
  }

  .app-c-btn-icon-sm {
    height: var(--form-item-height-sm);
    border-radius: var(--radius-sm);
  }

  .app-c-btn-icon-md {
    height: var(--form-item-height-md);
    border-radius: var(--radius-md);
  }

  .app-c-btn-icon-lg {
    height: var(--form-item-height-lg);
    border-radius: var(--radius-md);
  }
}

